2013-05-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by "Malte" and John McCorquodale:
	patch #7876 JTAGICE mkII fails to connect to attiny if debugwire
	is enabled AND target has a very slow clock
	* jtagmkII.c (jtagmkII_getsync): When leaving debugWIRE mode
	temporarily, immediately retry with ISP, rather than leaving.
	* stk500v2 (stk500v2_program_enable): Implemented similar logic
	for the JTAGICE3.

2013-05-16  Rene Liebscher <R.Liebscher@gmx.de>

	* configure.ac: reactivate check for TYPE_232H, which does not
	exist in libftdi < 0.20
	* avrftdi*.*: changed include check for libftdi/libusb, deactivate
	232H if not available
	* ft245r.c: changed include check for libftdi/libusb

2013-05-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* main.c (main): Add option -l logfile.
	* avrdude.1: Document -l option.
	* doc/avrdude.texi: (Dito.)

2013-05-15  Rene Liebscher <R.Liebscher@gmx.de>

	* configure.ac: if both found libftdi and libftdi1 use only libftdi1
	* avrdude.conf.in: fixed buff pins of avrftdi programmers (low
	active buffer need now inverted numbers)
	* avrftdi*.*: accept also old libftdi (0.20 still works with it),
	added powerup to initialize
	* ft245r.c: accept libftdi1, code cleanup and make it more similar
	to avrfdti (os they might be merged someday)

2013-05-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (AC_INIT): Bump version to 6.0rc1.

2013-05-07  Hannes Weisbach <hannes_weisbach@gmx.net>

	* avrftdi_private.h: Change size of pin_checklist to N_PINS (from N_PINS-1)
	* avrftdi.c: Adapt code to new size of pin_checklist. Remove pins_check()
	from set_pin().
	Add pgm->power[up|down] functions as well as fill pgm->enable|disable with
	proper content as suggested by Rene Liebscher.

2013-05-05  Rene Liebscher <R.Liebscher@gmx.de>

	* pindefs.h: use unsigned int if stdint.h is not available and UINT_MAX is 0xffffffff
	otherwise use unsinged long
	* ft245r.c: added support for more pin functions led, vcc, buff
